--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<html>
-  <head>
-    <title>
-    Hello 7mo 2da
-    </title>
-  </head>
-  <body>
-    <h1>Alum: aguirre manuel</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aguirre Manuel - 7mo 2da</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Aguirre Manuel - 7mo 2da</h1>
+        <div class="buttons">
+            <button>Tarea Nro 1</button>
+            <button>Tarea Nro 2</button>
+            <button>Tarea Nro 3</button>
+            <button>Tarea Nro 4</button>
+            <button>Tarea Nro 5</button>
+        </div>
+    </div>
+</body>
 </html>
